--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-intl": "^6.6.2",
     "react-lazy-load": "^4.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "6.14.2",
