--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
-    "react-intl": "^6.6.2",
     "react-lazy-load": "^4.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "6.14.2",
