--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "6.14.2",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "sass": "^1.71.1",
+    "slick-carousel": "^1.8.1",
     "use-react-router-breadcrumbs": "4.0.1",
     "use-react-screenshot": "^4.0.0",
     "yup": "^1.4.0"
